<resources>
	<string name="description">Moving wave lines</string>
	<string name="make_theme_from_image">Make theme</string>
	<string name="gallery">Theme Gallery</string>
	<string name="themes">Theme %d of %d</string>
	<string name="add_theme">Add theme</string>
	<string name="delete_theme">Delete theme</string>
	<string name="duplicate_theme">Duplicate theme</string>
	<string name="share_theme">Share theme</string>
	<string name="import_theme">Import theme</string>
	<string name="change_layout">Change layout</string>
	<string name="error_importing_theme">Cannot import theme</string>
	<string name="sure_to_delete_theme">Are you sure you want to delete this theme?</string>
	<string name="set_theme">Use as wallpaper</string>
	<string name="edit_theme">Edit theme</string>
	<string name="cannot_set_wallpaper">Cannot set wallpaper</string>
	<string name="wallpaper_set">Wallpaper set</string>
	<string name="pick_live_wallpaper">Please pick this app as Live Wallpaper to set this wallpaper</string>
	<string name="pick_live_wallpaper_manually">You need to pick this app as Live Wallpaper first</string>
	<string name="cancel">Cancel</string>
	<string name="discard_changes">Discard changes?</string>
	<string name="sure_to_discard_changes">Are you sure you want to discard all changes?</string>
	<string name="coupled">Coupled waves</string>
	<string name="uniform">Uniform width</string>
	<string name="shuffle">Random start color</string>
	<string name="lines">Lines: %d</string>
	<string name="waves">Waves: %d</string>
	<string name="amplitude">Amplitude: %.02f</string>
	<string name="oscillation">Oscillation: %.02f</string>
	<string name="shift_random">Horizontal shift per line: random</string>
	<string name="shift">Horizontal shift per line: %.02f</string>
	<string name="speed">Horizontal speed of the waves: %.02f</string>
	<string name="growth">Vertical growth: %.03f</string>
	<string name="rotation">Rotation: %d°</string>
	<string name="colors">Colors</string>
	<string name="add_color">Add color</string>
	<string name="remove_color">Remove color</string>
	<string name="duplicate_color">Duplicate color</string>
	<string name="shift_left">Shift left</string>
	<string name="shift_right">Shift right</string>
	<string name="enter_color">Enter color</string>
	<string name="rotate_hue">Rotate hue</string>
	<string name="hue">Hue: %d</string>
	<string name="saturation">Saturation: %.02f</string>
	<string name="value">Value: %.02f</string>
	<string name="stroke_width">Stroke width: %d</string>
	<string name="color">Color</string>
	<string name="how_many_columns">How many columns?</string>
	<string name="columns_two">2 columns</string>
	<string name="columns_three">3 columns</string>
	<string name="tap_anywhere_to_close">Tap anywhere to close preview</string>
	<string name="tap_for_full_screen">Tap anywhere for full screen\nSwipe left/right to browse</string>
</resources>
