<android.support.v4.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/coupled"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/coupled"
			android:padding="16dp"/>
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/uniform"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/uniform"
			android:padding="16dp"/>
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/shuffle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/shuffle"
			android:padding="16dp"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/lines_label"
			android:text="@string/lines"/>
		<SeekBar
			style="@style/EditorSeekBar"
			tools:ignore="UnusedAttribute"
			android:id="@+id/lines"
			android:min="2"
			android:max="24"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/waves_label"
			android:text="@string/waves"/>
		<SeekBar
			style="@style/EditorSeekBar"
			tools:ignore="UnusedAttribute"
			android:id="@+id/waves"
			android:min="1"
			android:max="12"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/amplitude_label"
			android:text="@string/amplitude"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/amplitude"
			android:max="15"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/oscillation_label"
			android:text="@string/oscillation"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/oscillation"
			android:max="30"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/shift_label"
			android:text="@string/shift"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/shift"
			android:max="100"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/speed_label"
			android:text="@string/speed"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/speed"
			android:max="30"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/growth_label"
			android:text="@string/growth"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/growth"
			android:max="4"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/rotation_label"
			android:text="@string/rotation"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/rotation"
			android:max="359"/>
		<TextView
			android:text="@string/colors"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="16dp"
			android:paddingLeft="16dp"
			android:paddingStart="16dp"
			android:paddingRight="16dp"
			android:paddingEnd="16dp"/>
		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="4dp"
				android:paddingBottom="8dp"
				android:paddingLeft="16dp"
				android:paddingStart="16dp"
				android:paddingRight="16dp"
				android:paddingEnd="16dp">
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/add_color"
					android:contentDescription="@string/add_color"
					android:src="@drawable/ic_add_color"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/remove_color"
					android:contentDescription="@string/remove_color"
					android:src="@drawable/ic_remove_color"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/duplicate_color"
					android:contentDescription="@string/duplicate_color"
					android:src="@drawable/ic_duplicate"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/shift_left"
					android:contentDescription="@string/shift_left"
					android:src="@drawable/ic_shift_left"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/shift_right"
					android:contentDescription="@string/shift_right"
					android:src="@drawable/ic_shift_right"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/enter_color"
					android:contentDescription="@string/enter_color"
					android:src="@drawable/ic_enter_color"/>
				<ImageButton
					style="@style/ColorButton"
					android:id="@+id/rotate_hue"
					android:contentDescription="@string/rotate_hue"
					android:src="@drawable/ic_rotate_hue"/>
			</LinearLayout>
		</HorizontalScrollView>
		<HorizontalScrollView
			android:id="@+id/colors_scroll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background_colors">
			<LinearLayout
				tools:ignore="UnusedAttribute"
				android:id="@+id/colors"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:animateLayoutChanges="true"/>
		</HorizontalScrollView>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/hue_label"
			android:text="@string/hue"/>
		<SeekBar
			style="@style/HueSeekBar"
			android:id="@+id/hue"
			android:max="360"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/saturation_label"
			android:text="@string/saturation"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/saturation"
			android:max="100"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/value_label"
			android:text="@string/value"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/value"
			android:max="100"/>
		<TextView
			style="@style/EditorLabel"
			android:id="@+id/stroke_width_label"
			android:text="@string/stroke_width"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/stroke_width"
			android:max="10"
			android:layout_marginBottom="24dp"/>
	</LinearLayout>
</android.support.v4.widget.NestedScrollView>
