<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/coupled"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/coupled"
			android:padding="16dp"/>
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/uniform"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/uniform"
			android:padding="16dp"/>
		<TextView
			android:id="@+id/lines_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/lines"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/lines"
			android:max="24"/>
		<TextView
			android:id="@+id/waves_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/waves"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/waves"
			android:max="12"/>
		<TextView
			android:id="@+id/amplitude_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/amplitude"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/amplitude"
			android:max="15"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/colors"
			android:paddingTop="16dp"
			android:paddingLeft="16dp"
			android:paddingStart="16dp"
			android:paddingRight="16dp"
			android:paddingEnd="16dp"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="4dp"
			android:paddingBottom="8dp"
			android:paddingLeft="16dp"
			android:paddingStart="16dp"
			android:paddingRight="16dp"
			android:paddingEnd="16dp">
			<ImageButton
				style="@style/ColorButton"
				android:id="@+id/add_color"
				android:contentDescription="@string/add_color"
				android:src="@drawable/ic_add_color"/>
			<ImageButton
				style="@style/ColorButton"
				android:id="@+id/remove_color"
				android:contentDescription="@string/remove_color"
				android:src="@drawable/ic_remove_color"/>
			<ImageButton
				style="@style/ColorButton"
				android:id="@+id/shift_left"
				android:contentDescription="@string/shift_left"
				android:src="@drawable/ic_shift_left"/>
			<ImageButton
				style="@style/ColorButton"
				android:id="@+id/shift_right"
				android:contentDescription="@string/shift_right"
				android:src="@drawable/ic_shift_right"/>
		</LinearLayout>
		<HorizontalScrollView
			android:id="@+id/colors_scroll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background_colors">
			<LinearLayout
				tools:ignore="UnusedAttribute"
				android:id="@+id/colors"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:animateLayoutChanges="true"/>
		</HorizontalScrollView>
		<TextView
			android:id="@+id/hue_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/hue"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/hue"
			android:max="360"/>
		<TextView
			android:id="@+id/saturation_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/saturation"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/saturation"
			android:max="100"/>
		<TextView
			android:id="@+id/value_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/value"
			android:padding="16dp"/>
		<SeekBar
			style="@style/EditorSeekBar"
			android:id="@+id/value"
			android:max="100"
			android:layout_marginBottom="24dp"/>
	</LinearLayout>
</ScrollView>
